--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-helmet": "^6.1.5",
     "axios": "^0.26.1",
     "cli": "^1.0.1",
     "commitlint": "^16.2.1",
     "husky": "^7.0.4",
+    "query-string": "^7.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.27.1",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "sass": "^1.49.9",
@@ -47,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "dotenv-webpack": "^7.1.0",
+    "html-webpack-plugin": "4"
   }
 }
